# qa-portfolio

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pages.yml
pages/: __init__.py  base_page.py
pages/the_internet/: __init__.py  add_remove_elements_page.py  checkboxes_page.py  context_menu_page.py  dropdown_page.py  dynamic_controls_page.py  dynamic_loading_page.py  file_upload_page.py  frames_page.py  horizontal_slider_page.py  hovers_page.py  inputs_page.py  js_alerts_page.py  key_presses_page.py  login_page.py  status_codes_page.py  the_internet_page.py  windows_page.py
reports/: report.html
reports/allure-results/: 10a50c36-7a5c-42e2-8496-3835c75696d6-container.json  10eb0857-2673-4858-943a-c3503b6a45ee-result.json  29b74cd7-713f-49b1-bef5-e87f776ab091-container.json  2c262e23-9f41-473f-a336-a819ffedb220-container.json  35a7c733-029c-4e93-ad76-a08fafd798b4-result.json  3a0dba55-d29e-4eb3-98d8-14454dbeb63e-container.json  3e2d0ff7-c425-428a-9b64-3fb67a6c303c-container.json  42b0683f-dd8c-4c38-8f5a-6b98b925fae6-container.json  535bc8bf-b2ef-4c6d-a1c5-660b2094a318-result.json  5d3747dd-2a5a-41f2-a5ce-ba509224cf95-container.json  5f18e29b-53cc-43f0-a4cc-bb117ae5835c-result.json  70f3455d-c351-4a1a-8114-004bd3993e7e-container.json  760556e0-af4a-4cca-bb4a-6646f990218b-container.json  896c53e5-725e-4eca-a831-524b8dd98bac-container.json  9b35b5bc-94f1-4332-b9b5-7651155bcd39-container.json  (+6 more)
scripts/: reports.ps1
tests/: conftest.py  test_playwright_api.py  test_pytest_regression.py  test_selenium_the_internet.py  test_selenium_ui.py
